--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,13 @@
-:root {
+*{
+  padding: 0;
+	margin: 0;
+}
+
+body{
+  margin: 0;
+  padding: 0;
+}
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -66,4 +75,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
