--- a/src/views/NavBar/NavBar.module.css
+++ b/src/views/NavBar/NavBar.module.css
@@ -20,9 +20,9 @@
   align-items: center;
 }
 
-.logo-NavBar {
-  margin-right: 15px;
-  margin-left: 15px;
+.logoNavBar {
+  width: 40%;
+  min-height: 10vh;
 }
 
 .link {
@@ -134,6 +134,7 @@
 /* -------------------------------------Tienda */
 .link[id="tiendaNav"]{
   border-radius: 5px;
+  margin-right: 50px;
 }
 .link[id="tiendaNav"]:hover{
   background-color: silver;
