--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ body{
 .Buttons{
   text-decoration: none;
   width: fit-content;
-  background-color: #13363e;
+  background-color: #17424b;
   color: rgb(255 255 255);
   padding: 1.4rem 2.4rem;
   border: none;
