--- a/src/views/Home/PreOrder/PreOrder.module.css
+++ b/src/views/Home/PreOrder/PreOrder.module.css
@@ -51,7 +51,7 @@
   width: 16px;
   border-radius: 50%;
   display: inline-block;
-  border: 2px solid #13363e;
+  border: 2px solid #17424b;
   background-color: transparent;
   cursor: pointer;
   color: transparent;
@@ -60,7 +60,7 @@
 }
 
 .customDots li button:hover {
-  background-color: #13363e;
+  background-color: #17424b;
   transition: 0.3s ease;
 }
 
@@ -70,7 +70,7 @@
   height: 10px;
   width: 10px;
   border-radius: 50%;
-  background-color: #13363e;
+  background-color: #17424b;
   opacity: 0; /* Establece la opacidad en 0 para que no se muestre por defecto */
   transition: opacity 0.3s ease;
 }
