--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 /* --------------------------NO LO BORREN!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
 
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;400&family=Lexend+Peta:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;400');
 
 *{
   padding: 0;
