--- a/src/views/NavBar/NavBar.module.css
+++ b/src/views/NavBar/NavBar.module.css
@@ -6,7 +6,7 @@
   justify-content: space-between;
   align-items: center;
   height: 10.8%;
-  width: 100%; 
+  width: 100%;
   border-bottom: 2px solid silver;
   z-index: 1;
 }
@@ -43,17 +43,17 @@
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 
-/* -------------------------------------Conocenos */
-.link[id="conocenosNav"]{
+/* -------------------------------------About Us */
+.link[id="conocenosNav"] {
   border-radius: 5px;
   text-decoration: none;
 }
-.link[id="conocenosNav"]:hover{
+.link[id="conocenosNav"]:hover {
   background-color: silver;
   text-decoration: none;
 }
-/* -------------------------------------Novedades */
-.sectionOption{
+/* -------------------------------------News */
+.sectionOption {
   background-color: #efefdc;
   margin: -7px;
   border-left: 2px solid silver;
@@ -63,97 +63,72 @@
   text-align: center;
   align-content: center;
 }
-.dropdownOption[id="nosotros"]{
+.dropdownOption[id="nosotros"] {
   font-weight: 600;
   text-align: center;
 }
-.dropdownOption[id="nosotros"]:hover{
-
+.dropdownOption[id="nosotros"]:hover {
   border-bottom: 2px solid silver;
   color: #000804;
   text-decoration: none;
 }
-.ative[id="nosotros"]{
-
+.ative[id="nosotros"] {
   border-bottom: 2px solid silver;
   color: white;
   text-decoration: none;
 }
-/* -------------------------------------Listas populares */
-.dropdownOption[id="nuestraHistoria"]{
-
+/* -------------------------------------Popular Lists */
+.dropdownOption[id="nuestraHistoria"] {
   font-weight: 600;
   text-align: center;
 }
-.dropdownOption[id="nuestraHistoria"]:hover{
-
+.dropdownOption[id="nuestraHistoria"]:hover {
   border-bottom: 2px solid silver;
   color: #000804;
   text-decoration: none;
 }
-.active[id="nuestraHistoria"]{
-  
-  border-bottom: 2px solid silver;
-  color: white;
-  text-decoration: none;
-}
-/* -------------------------------------nuestroEquipoNav */
-.dropdownOption[id="nuestroEquipoNav"]{
-  
-  font-weight: 600;
-  text-align: center;
-}
-.dropdownOption[id="nuestroEquipoNav"]:hover{
-
-  border-bottom: 2px solid silver;
-  color: #000804;
-  text-decoration: none;
-}
-.active[id="nuestroEquipoNav"]{
-
+.active[id="nuestraHistoria"] {
   border-bottom: 2px solid silver;
   color: white;
   text-decoration: none;
 }
 
-/* -------------------------------------Noticias */
-.link[id="noticiasNav"]{
+/* -------------------------------------News */
+.link[id="noticiasNav"] {
   margin: 1px;
 }
-.link[id="noticiasNav"]:hover{
+.link[id="noticiasNav"]:hover {
   background-color: silver;
 }
-.active[id="noticiasNav"]{
-  background-color: #EB5D0B;
+.active[id="noticiasNav"] {
+  background-color: #eb5d0b;
   color: #000804;
   text-decoration: none;
 }
 
-/* -------------------------------------Tienda */
-.link[id="tiendaNav"]{
+/* -------------------------------------Store */
+.link[id="tiendaNav"] {
   border-radius: 5px;
   margin-right: 50px;
 }
-.link[id="tiendaNav"]:hover{
+.link[id="tiendaNav"]:hover {
   background-color: silver;
 }
-.active[id="tiendaNav"]{
+.active[id="tiendaNav"] {
   color: #000804;
   text-decoration: none;
 }
 
-/* -------------------------------------Perfil */
-.link[id="perfilNav"]{
-  border-bottom:6px solid #124476;
-  border-bottom-right-radius: 5px;
+/* -------------------------------------Profile */
+.link[id="perfilNav"] {
+  border-radius: 5px;
+  margin-right: 50px;
 }
-.link[id="perfilNav"]:hover{
-  background-color: #124476;
-  text-decoration: none;
+.link[id="perfilNav"]:hover {
+  background-color: silver;
 }
-.active[id="perfilNav"]{
-  background-color: #124476;
-  color: white;
+.active[id="perfilNav"] {
+  color: #000804;
   text-decoration: none;
 }
 
@@ -205,7 +180,6 @@
   border: none;
   padding: 5px;
   background-color: transparent;
-
 }
 
 .buttonContainer[id="cerrariniciarNav"]:hover {
@@ -217,8 +191,7 @@
   color: #000804;
 }
 
-
-/* -------------------------------------Administrador */
+/* -------------------------------------Administrator */
 .linkContainer[id="administradorNav"] {
   border-bottom: 6px solid #3c67a4;
 }
@@ -233,7 +206,8 @@
   text-decoration: none;
 }
 
-/*====>>>acá va ir responsivo hamburguesa<<<====*/
+
+/*====>>>responsive hamburger menu will go here<<<====*/
 
 
 /* 
