--- a/src/views/Home/NewReleases/NewReleases.css
+++ b/src/views/Home/NewReleases/NewReleases.css
@@ -17,8 +17,8 @@
 
 .ReleaseNowHomeTitle h1{
     margin-top: 0;
-    font-size: 1.9rem;
-    font-weight: 100;
+    font-size: 1.7rem;
+    font-weight: 400;
 }
 
 
@@ -37,8 +37,9 @@
 
 .ImagenesCarrusel h1 {
     color: #17424b;
+    padding: 0 0.5rem;
     font-size: 16px;
-    font-weight: 100;
+    font-weight: 500;
     margin-bottom: 4rem;
 }
 
