--- a/src/components/Store/Order/Order.css
+++ b/src/components/Store/Order/Order.css
@@ -3,27 +3,23 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 250px;
+    padding: 0 0.5rem;
     background-color: transparent; 
-    color: black;
+    color: #17424b;
+    letter-spacing: 0.2rem;
+    font-size: 0.8rem;
+    margin-right: -6rem;
 }
 
 .LabelOrder {
-    position: absolute;
-    top:22%;
-    font-size: 14px;
-    padding-right: 10px;
-    font-weight: bold;
-    border-right: 3px solid silver;
+    font-size: 0.8rem;
+    padding-right: 1rem;
 }
   
 .SelectorOrder {
-    position: absolute;
-    left: 40%;
-    width: 50%;
     height: 100%;
+    padding-right: 1rem;
     background-color: transparent;
-    font-size: 13px;
     border: none !important;
     appearance: none;
     -webkit-appearance: none;
@@ -34,18 +30,18 @@
     cursor: pointer;
     text-align: center;
     outline: none;
+    letter-spacing:0.2rem;
 }
   
 .SelectorOrder option {
     background-color: rgb(241, 241, 241);
-    font-size: 12px;
-    color: black;
+    display: flex;
+    text-align: left;
     outline: none;
+    font-size: 0.75rem;
 }
 .SelectorOrder option:hover {
     background-color: white;
-    font-size: 12px;
-    color: black;
     border: none;
     outline: none;
 }
