--- a/src/views/About/About.module.css
+++ b/src/views/About/About.module.css
@@ -23,7 +23,7 @@
 
 .headerAboutLaGruta p {
   font-size: 35px;
-  color: #B9362C;
+  color: #b38a83;
   font-family: 'DK Lemon Yellow Sun', sans-serif;
 }
 
