--- a/src/components/Store/Filter/Filter.css
+++ b/src/components/Store/Filter/Filter.css
@@ -3,6 +3,8 @@
     margin-top: 3rem;
     flex-direction: column;
     align-items: flex-start;
+    /* position: fixed;
+    left: 3%; */
   }
 
 /* --------------------------------TITLE-------------------------------- */
