--- a/src/views/NavBar/NavBar.module.css
+++ b/src/views/NavBar/NavBar.module.css
@@ -3,11 +3,11 @@
   display: flex;
   position: fixed;
   top: 0;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   height: 10.8%;
   width: 100%;
-  border-bottom: 2px solid silver;
+  border-bottom: none;
   z-index: 1;
 }
 
@@ -16,7 +16,7 @@
   width: 80%;
   margin: 10px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -34,6 +34,7 @@
   transition: 0.5s ease;
   z-index: 9;
   font-size: 15px;
+  font-weight: bold;
 }
 
 .link:hover {
@@ -142,6 +143,7 @@
   position: absolute;
   min-width: 108px;
   z-index: 1;
+  top: 100%;
 }
 
 .link:hover + .dropdownContent,
