--- a/src/views/Store/Store.css
+++ b/src/views/Store/Store.css
@@ -1,8 +1,10 @@
 .ContainerGridFilterColumn {
-  padding: 4rem 10rem;
+  padding: 4rem 4rem;
   display: grid;
-  grid-template-columns: 0.2fr 1fr;
+  grid-template-columns: 0.3fr 1fr;
   gap: 1rem;
+  margin-top: 4%;
+
 }
 
 
