Cart, new release y otro cambios

--- a/src/components/Store/Order/Order.css
+++ b/src/components/Store/Order/Order.css
@@ -8,7 +8,7 @@
     color: #17424b;
     letter-spacing: 0.2rem;
     font-size: 0.8rem;
-    margin-right: -6rem;
+    width: 17rem;
 }
 
 .LabelOrder {
