--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,12 @@ body{
   gap: 1rem;
   grid-template-columns: 1fr 1.2fr 0.5fr 0.8fr;
 }
+.grid-five-column {
+  display: Grid;
+  grid-template-columns: repeat(4, 1fr) 0.3fr;
+  text-align: center;
+  align-items: center;
+}
 
 .Buttons{
   text-decoration: none;
@@ -44,11 +50,34 @@ body{
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
   -o-transition: all 0.3s ease 0s;
+  outline: none;
 }
 
 .Buttons:hover,
 .Buttons:active{
   transform: scale(0.96);
+}
+
+.BotoneraSumaResta{
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+  align-items: center;
+  padding: 0.5rem 0;
+}
+
+.ButtonsSumaResta{
+  border: none;
+  font-size: 1.5rem;
+  justify-content: center;
+  background-color: transparent;
+  padding: 0 1.5rem;
+}
+
+@media (max-width: 980px) {
+  .GridTwoColumns , .GridThreeColumns, .GridFourColumns{
+    grid-template-columns: 1fr;
+    }
 }
 
 /* :root {
