--- a/src/components/Store/Filter/Filter.css
+++ b/src/components/Store/Filter/Filter.css
@@ -17,6 +17,7 @@
     text-transform: uppercase;
     color: #17424b;
     padding: 1rem;
+    margin-top: 0.5rem;
 }
 
 /* --------------------------------SubCategorias-------------------------------- */
@@ -51,4 +52,45 @@
 
 .ActiveButtonNull {
     color: black;
+}
+
+/* --------------------------------FORMAT-------------------------------- */
+.BookFormatContainer {
+    display: flex;
+    flex-direction: row;
+    padding: 0 1rem;
+}
+
+.BookFormat{
+    font-size: 0.8rem;
+    padding: 0.3rem 1.2rem;
+    border: none;
+    color: grey;
+    background-color: transparent;
+    outline: none;
+}
+.BookFormat:hover {
+    border: none;
+}
+
+.BookFormat option{
+    padding: 1rem 0;
+    background-color: white;
+    border:none;
+}
+
+
+
+
+.FilterOption{
+    font-size: 0.6rem;
+    height: 2.1rem;
+    width: 2.1rem;
+    border-radius: 50px;
+    border: 2px solid #17424b;
+}
+.FilterOption:hover,
+.FormatActive {
+    background-color: #17424b !important;
+    color:white !important;
 }
