--- a/src/views/Detail/BookDetail.css
+++ b/src/views/Detail/BookDetail.css
@@ -34,6 +34,10 @@
 
 
 /* -----------------------------------------------DATA---------------------------------------------------- */
+.HeartFav{
+    border: none;
+    background-color: transparent;
+}
 
 .DetailData h2{
     text-transform: capitalize;
