--- a/src/components/Store/Order/Order.css
+++ b/src/components/Store/Order/Order.css
@@ -18,6 +18,7 @@
   
 .SelectorOrder {
     height: 100%;
+    color: grey;
     padding-right: 1rem;
     background-color: transparent;
     border: none !important;
@@ -30,7 +31,7 @@
     cursor: pointer;
     text-align: center;
     outline: none;
-    letter-spacing:0.2rem;
+    letter-spacing:0.1rem;
 }
   
 .SelectorOrder option {
@@ -38,7 +39,7 @@
     display: flex;
     text-align: left;
     outline: none;
-    font-size: 0.75rem;
+    font-size: 0.8rem;
 }
 .SelectorOrder option:hover {
     background-color: white;
