--- a/src/views/About/Team/Team.module.css
+++ b/src/views/About/Team/Team.module.css
@@ -1,27 +1,27 @@
 /* @import url('https://fonts.cdnfonts.com/css/wicked-grit');
 @import url('https://fonts.cdnfonts.com/css/dk-lemon-yellow-sun'); */
 
-.equipo {
+.team {
   max-width: 100%;
   margin: 0 auto;
   text-align: center;
   margin-top: 9%;
 }
 
-.equipoTitle {
+.teamTitle {
   color: #124476;
   font-family: 'Wicked Grit', sans-serif;
   font-size: 50px;
   margin-bottom: 20px;
 }
 
-.equipoCards {
+.teamCards {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-.equipoCard {
+.teamCard {
   width: calc(33.33% - 40px);
   width: 300px;
   height: 400px;
@@ -33,11 +33,11 @@
   transform-style: preserve-3d;
 }
 
-.equipoCard:hover {
+.teamCard:hover {
   transform: rotateY(180deg);
 }
 
-.equipoCardImage {
+.teamCardImage {
   width: 200px;
   height: 200px;
   border-radius: 50%;
@@ -45,8 +45,8 @@
   object-fit: cover;
 }
 
-.equipoCardFront,
-.equipoCardBack {
+.teamCardFront,
+.teamCardBack {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -55,7 +55,7 @@
   transition: 0.5s;
 }
 
-.equipoCardFront {
+.teamCardFront {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -65,7 +65,7 @@
   box-shadow: 0 5px 5px;
 }
 
-.equipoCardBack {
+.teamCardBack {
   transform: perspective(600px) rotateY(180deg);
   background-color: #f2f2f2;
   display: flex;
@@ -74,37 +74,35 @@
   justify-content: center;
 }
 
-.equipoCard--active .equipoCardFront {
+.teamCard--active .teamCardFront {
   transform: rotateY(-180deg);
 }
 
-.equipoCard--active .equipoCardBack {
+.teamCard--active .teamCardBack {
   transform: rotateY(0deg);
 }
 
-.equipoCardContent {
+.teamCardContent {
   margin-top: 20px;
 }
 
-.equipoCardName {
+.teamCardName {
   color: black;
   font-family: 'Wicked Grit', sans-serif;
   font-size: 26px;
   margin-bottom: 8px;
 }
 
-.equipoCardPosition {
+.teamCardPosition {
   color: white;
   font-size: 25px;
   margin-bottom: 8px;
   font-family: 'DK Lemon Yellow Sun', sans-serif;
 }
 
-.equipoCardDescription {
+.teamCardDescription {
   font-size: 25px;
   line-height: 1.5;
   margin-bottom: 0;
   font-family: 'DK Lemon Yellow Sun', sans-serif;
 }
-
-  
