--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,13 @@ body{
   padding: 0 1.5rem;
 }
 
+.booksAvailable{
+  display: flex;
+  align-items: center;
+  color: grey;
+  font-size: 0.8rem;
+}
+
 @media (max-width: 980px) {
   .GridTwoColumns , .GridThreeColumns, .GridFourColumns{
     grid-template-columns: 1fr;
