--- a/src/views/Profile/Profile.css
+++ b/src/views/Profile/Profile.css
@@ -32,19 +32,68 @@
   font-size: 20px;
 }
 
-.profile-image {
+.perfil-image {
   position: relative;
-  width: 200px;
-  height: 200px;
-  margin-bottom: 20px;
+  width: 250px;
+  height: 250px;
+  margin-bottom: 10px;
 }
 
 .profile-image {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 50%;
+  border-radius: 30%;
 }
+
+/* ...otros estilos... */
+
+.image-buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+
+.upload-button,
+.delete-button {
+  background-color: #17424b;
+  color: #fff;
+  border: none;
+  padding: 8px 12px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+/* .upload-button {
+  display: inline-block;
+  background-color: #17424b;
+  color: #fff;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-right: 10px;
+} */
+
+.upload-button input[type="file"] {
+  display: none;
+}
+/* 
+.delete-button {
+  display: inline-block;
+  background-color: #b38a83;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+} */
+
+/* ...otros estilos... */
 
 .image-upload {
   position: absolute;
