--- a/src/views/NavBar/NavBar.module.css
+++ b/src/views/NavBar/NavBar.module.css
@@ -41,7 +41,6 @@
   transition: 0.5s ease;
   text-decoration: none;
   color: #000804;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 
 /* -------------------------------------About Us */
@@ -54,7 +53,7 @@
   text-decoration: none;
 }
 /* -------------------------------------News */
-.sectionOption {
+/* .sectionOption {
   background-color: #efefdc;
   margin: -7px;
   border-left: 2px solid silver;
@@ -77,9 +76,9 @@
   border-bottom: 2px solid silver;
   color: white;
   text-decoration: none;
-}
+} */
 /* -------------------------------------Popular Lists */
-.dropdownOption[id="nuestraHistoria"] {
+/* .dropdownOption[id="nuestraHistoria"] {
   font-weight: 600;
   text-align: center;
 }
@@ -92,10 +91,10 @@
   border-bottom: 2px solid silver;
   color: white;
   text-decoration: none;
-}
+} */
 
 /* -------------------------------------News */
-.link[id="noticiasNav"] {
+/* .link[id="noticiasNav"] {
   margin: 1px;
 }
 .link[id="noticiasNav"]:hover {
@@ -105,12 +104,11 @@
   background-color: #eb5d0b;
   color: #000804;
   text-decoration: none;
-}
+} */
 
 /* -------------------------------------Store */
 .link[id="tiendaNav"] {
   border-radius: 5px;
-  margin-right: 50px;
 }
 .link[id="tiendaNav"]:hover {
   background-color: silver;
@@ -121,7 +119,7 @@
 }
 
 /* -------------------------------------Profile */
-.link[id="perfilNav"] {
+/* .link[id="perfilNav"] {
   border-radius: 5px;
   margin-right: 50px;
 }
@@ -168,33 +166,34 @@
   transition: 0.5s ease;
   color: white;
   text-decoration: none;
-}
+} */
 
 /* -------------------------------------RightSection------------------------------------- */
 .rightSection {
   margin-right: 5px;
+  width: 80%;
+  margin: 10px;
   display: flex;
+  justify-content: flex-end;
   align-items: center;
 }
 
-.buttonContainer[id="cerrariniciarNav"] {
-  border-radius: 5px;
-  border: none;
+/* .buttonContainer[id="cerrariniciarNav"] {
+  border: 1px solid red;
   padding: 5px;
   background-color: transparent;
 }
 
 .buttonContainer[id="cerrariniciarNav"]:hover {
-  background-color: silver;
+  background-color: transparent;
 }
 
 .loggingIn {
-  background-color: silver;
   color: #000804;
-}
+} */
 
 /* -------------------------------------Administrator */
-.linkContainer[id="administradorNav"] {
+.linkContainer[id="administradorNav"] { 
   border-bottom: 6px solid #3c67a4;
 }
 
