--- a/src/views/NavBar/NavBar.module.css
+++ b/src/views/NavBar/NavBar.module.css
@@ -3,111 +3,47 @@
   display: flex;
   position: fixed;
   top: 0;
-  justify-content: flex-start;
   align-items: center;
-  height: 10.8%;
-  width: 100%;
+  height: 4rem;
+  width: 100%; 
   border-bottom: none;
-  z-index: 1;
+  z-index: 99;
 }
 
 /* -------------------------------------LeftSection------------------------------------- */
 .LeftSection {
-  width: 80%;
-  margin: 10px;
+  width: 50%;
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  margin-left: 3rem;
 }
 
 .logoNavBar {
-  width: 40%;
-  min-height: 10vh;
+  width: 100%;
+  height: 4rem;
 }
 
-.link {
+.linkNavBar {
   text-decoration: none;
+  white-space: nowrap;
   color: #000804;
-  padding: 25px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 1rem;
+  height: 4rem;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
   transition: 0.5s ease;
-  z-index: 9;
-  font-size: 15px;
-  font-weight: bold;
 }
 
-.link:hover {
+.linkNavBar:hover {
   transition: 0.5s ease;
-  text-decoration: none;
-  color: #000804;
-}
-
-/* -------------------------------------About Us */
-.link[id="conocenosNav"] {
-  border-radius: 5px;
-  text-decoration: none;
-}
-.link[id="conocenosNav"]:hover {
-  background-color: silver;
-  text-decoration: none;
-}
-/* -------------------------------------News */
-/* .sectionOption {
-  background-color: #efefdc;
-  margin: -7px;
-  border-left: 2px solid silver;
-  border-right: 2px solid silver;
-  border-bottom: 2px solid silver;
-  width: 120%;
-  text-align: center;
-  align-content: center;
-}
-.dropdownOption[id="nosotros"] {
-  font-weight: 600;
-  text-align: center;
-}
-.dropdownOption[id="nosotros"]:hover {
-  border-bottom: 2px solid silver;
-  color: #000804;
-  text-decoration: none;
-}
-.ative[id="nosotros"] {
-  border-bottom: 2px solid silver;
-  color: white;
-  text-decoration: none;
-} */
-/* -------------------------------------Popular Lists */
-/* .dropdownOption[id="nuestraHistoria"] {
-  font-weight: 600;
-  text-align: center;
-}
-.dropdownOption[id="nuestraHistoria"]:hover {
-  border-bottom: 2px solid silver;
-  color: #000804;
-  text-decoration: none;
-}
-.active[id="nuestraHistoria"] {
-  border-bottom: 2px solid silver;
-  color: white;
-  text-decoration: none;
-} */
-
-/* -------------------------------------News */
-/* .link[id="noticiasNav"] {
-  margin: 1px;
-}
-.link[id="noticiasNav"]:hover {
   background-color: silver;
 }
-.active[id="noticiasNav"] {
-  background-color: #eb5d0b;
-  color: #000804;
-  text-decoration: none;
-} */
+
 
 /* -------------------------------------Store */
-.link[id="tiendaNav"] {
+/* .link[id="tiendaNav"] {
   border-radius: 5px;
 }
 .link[id="tiendaNav"]:hover {
@@ -116,7 +52,7 @@
 .active[id="tiendaNav"] {
   color: #000804;
   text-decoration: none;
-}
+} */
 
 /* -------------------------------------Profile */
 /* .link[id="perfilNav"] {
@@ -170,27 +106,29 @@
 
 /* -------------------------------------RightSection------------------------------------- */
 .rightSection {
-  margin-right: 5px;
   width: 80%;
-  margin: 10px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  margin-right: 3rem;
 }
 
-/* .buttonContainer[id="cerrariniciarNav"] {
-  border: 1px solid red;
-  padding: 5px;
-  background-color: transparent;
+.IconRightNavBar{
+  width:1.6rem;
+  height:1.6rem;
+  margin:0 2rem;
+  color: #17424b;
+  transition: 0.3s ease;
+}
+ .IconRightNavBar[id="OpenBook"]{
+  width:1.8rem;
+  height:1.8rem;
 }
 
-.buttonContainer[id="cerrariniciarNav"]:hover {
-  background-color: transparent;
+.IconRightNavBar:hover{
+  transition: 0.3s ease;
+  scale:1.2;
 }
-
-.loggingIn {
-  color: #000804;
-} */
 
 /* -------------------------------------Administrator */
 .linkContainer[id="administradorNav"] { 
@@ -277,4 +215,62 @@
     background-color: rgb(247, 9, 9);
     width: 100%; 
   }
+} */
+
+
+
+
+
+/* -------------------------------------News */
+/* .sectionOption {
+  background-color: #efefdc;
+  margin: -7px;
+  border-left: 2px solid silver;
+  border-right: 2px solid silver;
+  border-bottom: 2px solid silver;
+  width: 120%;
+  text-align: center;
+  align-content: center;
+}
+.dropdownOption[id="nosotros"] {
+  font-weight: 600;
+  text-align: center;
+}
+.dropdownOption[id="nosotros"]:hover {
+  border-bottom: 2px solid silver;
+  color: #000804;
+  text-decoration: none;
+}
+.ative[id="nosotros"] {
+  border-bottom: 2px solid silver;
+  color: white;
+  text-decoration: none;
+} */
+/* -------------------------------------Popular Lists */
+/* .dropdownOption[id="nuestraHistoria"] {
+  font-weight: 600;
+  text-align: center;
+}
+.dropdownOption[id="nuestraHistoria"]:hover {
+  border-bottom: 2px solid silver;
+  color: #000804;
+  text-decoration: none;
+}
+.active[id="nuestraHistoria"] {
+  border-bottom: 2px solid silver;
+  color: white;
+  text-decoration: none;
+} */
+
+/* -------------------------------------News */
+/* .link[id="noticiasNav"] {
+  margin: 1px;
+}
+.link[id="noticiasNav"]:hover {
+  background-color: silver;
+}
+.active[id="noticiasNav"] {
+  background-color: #eb5d0b;
+  color: #000804;
+  text-decoration: none;
 } */
