--- a/src/views/WishlistItem/WishlistItem.css
+++ b/src/views/WishlistItem/WishlistItem.css
@@ -20,13 +20,12 @@
 /* ------------------------------------Image */
 .figureStoreWish{
     margin: auto;
-    margin-top: 0.4rem;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 18rem;
-    width: 12.6rem;
+    height: 15rem;
+    width: 10rem;
     overflow:hidden;
     transition: all 0.5s linear;
 }
@@ -43,14 +42,17 @@
 }
 
 /* ------------------------------------middle */
-.WishlistInfoContent{
-    padding: 2rem; 
-}
 .WishlistInfoContent h2{
     max-width: 100%;
     word-wrap: break-word;
-    font-size: 1.3rem;
-    margin-bottom: 1rem;
+    font-size: 1.1rem;
+    margin-bottom: 1rem; 
+}
+.WishlistInfoContent p{
+    max-width: 100%;
+    word-wrap: break-word;
+    font-size: 0.9rem;
+    margin-bottom: 1rem; 
 }
 
 
