reviews/mail/getUser/alertas

--- a/src/views/NavBar/NavBar.module.css
+++ b/src/views/NavBar/NavBar.module.css
@@ -11,7 +11,7 @@
 }
 
 /* -------------------------------------LeftSection------------------------------------- */
-.LeftSection {
+.buttonsNav {
   width: 60%;
   display: flex;
   justify-content: flex-start;
@@ -41,70 +41,6 @@
   background-color: silver;
 }
 
-
-/* -------------------------------------Store */
-/* .link[id="tiendaNav"] {
-  border-radius: 5px;
-}
-.link[id="tiendaNav"]:hover {
-  background-color: silver;
-}
-.active[id="tiendaNav"] {
-  color: #000804;
-  text-decoration: none;
-} */
-
-/* -------------------------------------Profile */
-/* .link[id="perfilNav"] {
-  border-radius: 5px;
-  margin-right: 50px;
-}
-.link[id="perfilNav"]:hover {
-  background-color: silver;
-}
-.active[id="perfilNav"] {
-  color: #000804;
-  text-decoration: none;
-}
-
-.dropdownContainer {
-  display: flex;
-  align-items: center;
-}
-
-.dropdownContent {
-  display: none;
-  position: absolute;
-  min-width: 108px;
-  z-index: 1;
-  top: 100%;
-}
-
-.link:hover + .dropdownContent,
-.dropdownContent:hover {
-  display: block;
-  position: absolute;
-  background-color: white;
-  top: 110%;
-}
-
-.dropdownOption {
-  color: grey;
-  padding: 6px 6px;
-  font-size: 15px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-  transition: 0.5s ease;
-}
-
-.dropdownOption:hover {
-  transition: 0.5s ease;
-  color: white;
-  text-decoration: none;
-} */
-
-/* -------------------------------------RightSection------------------------------------- */
 .rightSection {
   width: 80%;
   display: flex;
@@ -166,133 +102,3 @@
   color: white;
   text-decoration: none;
 }
-
-
-/*====>>>acá va ir responsivo hamburguesa<<<====*/
-/* @media screen and (max-width: 968px) {
-
-  .navCtndr {
-    position: fixed;
-		left: 0;
-		height: 50%;
-		width: 100%;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-		gap: 1.5rem;
-		transition: 1s;
-  }
-
-  .LeftSection {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
-  }
-
-  .link {
-    display: flex;
-    flex-direction: column;
-    justify-content: center; 
-  }
-
-  .navCtndr .menuBtn {
-    display: flex;
-    padding: 5px;
-    z-index: 1;
-    position: absolute;
-		top: 2rem;
-		left: 2rem;
-  }
-  .btnOpen{
-    position: absolute;
-    top: 2rem;
-		left: 2rem;
-    padding: 5px;
-    visibility: visible;
-		opacity: 1;
-  }
-
-  .dropdownContainer {
-    flex-direction: column;
-    position: static;
-  }
-
-  .dropdownContent {
-    display: none;
-    position: static;
-    min-width: auto;
-    top: 0;
-    background-color: transparent;
-  }
-
-  .active + .LeftSection .link {
-    display: block;
-  }
-
-  .btnOpen .active + .LeftSection .dropdownContent {
-    display: block;
-    position: static;
-    background-color: rgb(247, 9, 9);
-    width: 100%; 
-  }
-} */
-
-
-
-
-
-/* -------------------------------------News */
-/* .sectionOption {
-  background-color: #efefdc;
-  margin: -7px;
-  border-left: 2px solid silver;
-  border-right: 2px solid silver;
-  border-bottom: 2px solid silver;
-  width: 120%;
-  text-align: center;
-  align-content: center;
-}
-.dropdownOption[id="nosotros"] {
-  font-weight: 600;
-  text-align: center;
-}
-.dropdownOption[id="nosotros"]:hover {
-  border-bottom: 2px solid silver;
-  color: #000804;
-  text-decoration: none;
-}
-.ative[id="nosotros"] {
-  border-bottom: 2px solid silver;
-  color: white;
-  text-decoration: none;
-} */
-/* -------------------------------------Popular Lists */
-/* .dropdownOption[id="nuestraHistoria"] {
-  font-weight: 600;
-  text-align: center;
-}
-.dropdownOption[id="nuestraHistoria"]:hover {
-  border-bottom: 2px solid silver;
-  color: #000804;
-  text-decoration: none;
-}
-.active[id="nuestraHistoria"] {
-  border-bottom: 2px solid silver;
-  color: white;
-  text-decoration: none;
-} */
-
-/* -------------------------------------News */
-/* .link[id="noticiasNav"] {
-  margin: 1px;
-}
-.link[id="noticiasNav"]:hover {
-  background-color: silver;
-}
-.active[id="noticiasNav"] {
-  background-color: #eb5d0b;
-  color: #000804;
-  text-decoration: none;
-} */
