--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,7 @@ h3 {
   justify-content: center;
   background-color: transparent;
   padding: 0 1.5rem;
+  cursor: pointer;
 }
 
 .booksAvailable{
